--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -5,13 +5,12 @@
    "metadata": {},
    "source": [
     "## Enter your names and student IDs here\n",
-    "Names & IDs: \n",
-    
+    "Names & IDs: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +124,7 @@
        "4    Armenia        Caucasus & Central Asia  2021      7.99"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
        "4    Armenia"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 263,
    "metadata": {
     "scrolled": true
    },
@@ -496,7 +495,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +567,7 @@
        "4  Netherlands"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -652,16 +651,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x26f3e6f0e30>"
+       "<matplotlib.legend.Legend at 0x197db726a80>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 274,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +781,7 @@
        "4    Armenia          7.764545"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +859,7 @@
        "52       Finland          8.915455"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1103,7 @@
        "Switzerland  9.13  9.12  9.08  9.11  9.13  9.14  9.20  9.19  9.17  8.96  9.01"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1228,7 @@
        "4    Armenia        Caucasus & Central Asia  2021      7.99        B"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1248,7 @@
        "Text(0, 0.5, 'Percentage of Countries')"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1285,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1359,7 @@
        "Syrian Arab Republic  1.74"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,7 +1377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1386,7 @@
        "<Axes: xlabel='hf_score', ylabel='Gross domestic product GDP percapta'>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1420,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1428,7 @@
        "<Axes: xlabel='hf_score', ylabel='Primary school dropout rate 2008-2014'>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1459,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1467,7 @@
        "<Axes: xlabel='hf_class'>"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1489,13 +1488,6 @@
     "avg_education_expenditure = merged_data.groupby('hf_class')['Public expenditure on education Percentange GDP'].mean()\n",
     "avg_education_expenditure.plot(kind='bar')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
